# covid19-india-mobility-report

./: README.md  mobility-data.ipynb  requirements.txt
SimCT/: .env.example  .gitignore  README.md  pyproject.toml
SimCT/docs/: ObjectModel.md  PRD_v1.md
SimCT/simct/: __init__.py  api.py
SimCT/simct/core/: __init__.py
SimCT/simct/core/loaders/: __init__.py  yaml_loader.py
SimCT/simct/core/models/: __init__.py  artifacts.py  blueprint.py  events.py  knowledge.py  state.py
SimCT/simct/core/projectors/: __init__.py  ae_projector.py  dm_projector.py
SimCT/simct/core/services/: __init__.py  knowledge_resolver.py  random_manager.py  study_initializer.py  study_simulator.py
SimCT/simct/core/validators/: __init__.py  study_validator.py
SimCT/simct/examples/: oncology_minimal.yaml
SimCT/tests/: test_ae_projector.py  test_blueprint_loader.py  test_dm_projector.py  test_initializer.py  test_simulator_smoke.py
